[gd_scene load_steps=11 format=3 uid="uid://bygpc5mbrbdt0"]

[ext_resource type="Texture2D" uid="uid://brs4j8vei8s0q" path="res://Sprites/UI/difficulty_icon/icon_easy.png" id="1_5uimn"]
[ext_resource type="Script" path="res://Scene/UI/the_choice_of_difficulty.gd" id="1_qmvmh"]
[ext_resource type="Texture2D" uid="uid://exjasjigsnn2" path="res://Sprites/UI/difficulty_icon/icon_middle.png" id="2_x7xdx"]
[ext_resource type="Texture2D" uid="uid://vtwmj8mfj26d" path="res://Sprites/UI/difficulty_icon/icon_easy_hover.png" id="3_53mxh"]
[ext_resource type="Texture2D" uid="uid://b2wi6lk4bh6mj" path="res://Sprites/UI/difficulty_icon/icon_hard.png" id="3_etrde"]
[ext_resource type="FontFile" uid="uid://cxpivi3hhba2h" path="res://Top_font_file.tres" id="4_awptc"]
[ext_resource type="Texture2D" uid="uid://bkia2gwyma05b" path="res://Sprites/UI/difficulty_icon/Lock_icon.png" id="5_3fxla"]
[ext_resource type="Texture2D" uid="uid://58thu0y3ljw6" path="res://Sprites/UI/difficulty_icon/icon_middle_hover.png" id="5_k2mq6"]
[ext_resource type="Texture2D" uid="uid://1am3d2vkccij" path="res://Sprites/UI/difficulty_icon/icon_hard_hover.png" id="7_e75dx"]
[ext_resource type="Texture2D" uid="uid://bjubaqakuognh" path="res://Sprites/UI/Setting_RU.png" id="10_8212y"]

[node name="The_choice_of_difficulty" type="Control" groups=["Language"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qmvmh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer_top" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(1920, 250)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer_top"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer_top/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer_top/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer_top/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer_top/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer_top/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/MarginContainer_top/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[node name="Label_LOCK" type="Label" parent="VBoxContainer/MarginContainer_top/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.483463, 0.547846, 0.350217, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_awptc")
theme_override_font_sizes/font_size = 50
text = "Откроется после
прохождения всех концовок"
horizontal_alignment = 1

[node name="MarginContainer_middle" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(1920, 280)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer_middle"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer_middle/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer_middle/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="Texture_Easy" type="TextureButton" parent="VBoxContainer/MarginContainer_middle/HBoxContainer/MarginContainer2"]
layout_mode = 2
texture_normal = ExtResource("1_5uimn")
texture_hover = ExtResource("3_53mxh")
stretch_mode = 0

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/MarginContainer_middle/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/MarginContainer_middle/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="Texture_Middle" type="TextureButton" parent="VBoxContainer/MarginContainer_middle/HBoxContainer/MarginContainer4"]
layout_mode = 2
texture_normal = ExtResource("2_x7xdx")
texture_hover = ExtResource("5_k2mq6")
stretch_mode = 0

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/MarginContainer_middle/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer/MarginContainer_middle/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="Texture_Hard" type="TextureButton" parent="VBoxContainer/MarginContainer_middle/HBoxContainer/MarginContainer6"]
layout_mode = 2
texture_normal = ExtResource("3_etrde")
texture_hover = ExtResource("7_e75dx")
stretch_mode = 0

[node name="Texture_LOCK" type="ColorRect" parent="VBoxContainer/MarginContainer_middle/HBoxContainer/MarginContainer6"]
unique_name_in_owner = true
visible = false
layout_mode = 2
color = Color(0.386473, 0.186159, 0.122894, 1)

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer_middle/HBoxContainer/MarginContainer6/Texture_LOCK"]
modulate = Color(0.172833, 0.172833, 0.172833, 1)
custom_minimum_size = Vector2(60, 120)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_right = 70.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_3fxla")
expand_mode = 2

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer/MarginContainer_middle/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="MarginContainer_botom" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(1920, 550)
layout_mode = 2
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer_botom"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer_botom/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer_botom/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer_botom/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer_botom/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="Label_Easy" type="Label" parent="VBoxContainer/MarginContainer_botom/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.513726, 0.580392, 0.376471, 1)
theme_override_colors/font_outline_color = Color(0.763297, 0.82737, 0.641395, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_awptc")
theme_override_font_sizes/font_size = 65
text = "ЛЕГКО"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/MarginContainer_botom/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/MarginContainer_botom/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="Label_Normal" type="Label" parent="VBoxContainer/MarginContainer_botom/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer4"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.513726, 0.580392, 0.376471, 1)
theme_override_colors/font_outline_color = Color(0.763297, 0.82737, 0.641395, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_awptc")
theme_override_font_sizes/font_size = 65
text = "НОРМАЛЬНО"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/MarginContainer_botom/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer/MarginContainer_botom/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="Label_Hard" type="Label" parent="VBoxContainer/MarginContainer_botom/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer6"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.513726, 0.580392, 0.376471, 1)
theme_override_colors/font_outline_color = Color(0.763297, 0.82737, 0.641395, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_awptc")
theme_override_font_sizes/font_size = 65
text = "ТЯЖЕЛО"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer/MarginContainer_botom/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(274, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer_botom/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="Texture_Control" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 31.0
offset_top = 825.0
offset_right = 1973.0
offset_bottom = 1229.0
scale = Vector2(1.3, 1.3)
texture = ExtResource("10_8212y")
expand_mode = 1
stretch_mode = 2

[connection signal="pressed" from="VBoxContainer/MarginContainer_middle/HBoxContainer/MarginContainer2/Texture_Easy" to="." method="_on_texture_easy_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer_middle/HBoxContainer/MarginContainer4/Texture_Middle" to="." method="_on_texture_middle_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer_middle/HBoxContainer/MarginContainer6/Texture_Hard" to="." method="_on_texture_hard_pressed"]
